--- a/snake.yml
+++ b/snake.yml
@@ -1,33 +1,21 @@
-name: Generate Snake Animation
+name: Generate Snake
 
 on:
-  # Run automatically every 24 hours
   schedule:
-    - cron: "0 */24 * * *"
-  
-  # Allows you to run this workflow manually from the Actions tab
+    # Runs at 00:00 UTC every day
+    - cron: "0 0 * * *"
   workflow_dispatch:
-  
-  # Run on every push to the main branch
-  push:
-    branches:
-      - main
 
 jobs:
-  generate:
-    permissions:
-      contents: write
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-
+    
     steps:
-      # Checkout the repository
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
-
-      # Generate the snake animation
-      - name: Generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v3
+        
+      - name: Generate Snake
+        uses: Platane/snk@v3
         with:
           github_user_name: MOHSINBINRAMZAN
           outputs: |
@@ -35,9 +23,8 @@ jobs:
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Push the generated files to the output branch
-      - name: Push generated snake to output branch
+          
+      - name: Push to GitHub
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
